# FNF4HEP

./: .gitignore  CrimeExample.ipynb  CrimeExample.py  README.md  UMNN_test.ipynb  alpha23_example.ipynb  analysis.py  galton.ipynb  galton_new.ipynb  setup.py
data/: fairDataset.py
data/Crime/: EDA.ipynb  data.pt
fax/: setup.cfg
fax/fax/: __init__.py
fax/fax/_src/: fair_flow.py  flow.py  umnn.py
models/: classifier.py  fair.py  fair_pipeline.py  flow.py  galton.py  my_fair.py  probability_flow.py  transforms.py
models/UMNN/: MonotonicNormalizer.py  __init__.py
saved_data/: data.npz
saved_models/: fair_0.0.pth  fair_0.02.pth  fair_0.1.pth  fair_0.2.pth  fair_0.9.pth  probability_flow.pth
utils/: DataSplitting.py  StatisticalDistance.py
