[metadata]
name = fax
author = LM, JT, NS
description = 
license = MIT
classifiers = 
  Programming Language :: Python :: 3.6


[options]
zip_safe = False
python_requires = ">=3.6"
include_package_data = True
package_dir = 
  = fax
packages = find:
test_requires = "pytest"

[options.packages.find]
where = fax

[flake8]
max-line-length = 88
